<resources>
    <string name="app_name">Happy Bar Client</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo">Correo</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_register">No tienes cuenta?.  Crea una aquí.</string>
    <string name="name">Nombre</string>
    <string name="register">Registrar</string>
    <string name="open_toolbar">Open</string>
    <string name="close_toolbar">Close</string>
</resources>
